# SCVP.Exercise3

./: CMakeLists.txt  state_machine.cpp  state_machine.h
